# TestCICD

./: CMakeLists.txt  dds_demo.idl  publisher.cpp  subscriber.cpp
config/: cyclonedds_config.xml
data/: metadata.json
